--- a/static/css/style.css
+++ b/static/css/style.css
@@ -456,6 +456,50 @@ margin: 0 auto;
 display: block;
 max-width: 100%;
 }
+
+
+img.img-center {
+	margin: 0 auto;
+	display: block;
+	max-width: 100%;
+}
+.flexslider li{
+	list-style-type: none;
+}
+.flexslider ul{
+	padding-left: 0;
+}
+.flexslider ul li{
+	display: none;
+}
+.flexslider input{
+	display: none;
+}
+.flexslider #slider1:checked ~ ul li:nth-child(1){
+	display: block;
+}
+.flexslider #slider2:checked ~ ul li:nth-child(2){
+	display: block;
+}
+.flexslider .radio-label{
+	position: absolute;
+    z-index: 2;
+	bottom: -20px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+.flexslider  label{
+	background-color: #ace73d;
+	border-radius: 10%;
+	width: 40px;
+	height: 10px;
+	cursor: pointer;
+	margin: 0px 3px;
+}
+.flexslider #slider1:checked ~ .radio-label label:nth-child(1),
+.flexslider #slider2:checked ~ .radio-label label:nth-child(2){
+	background-color:  #496d04;
+}
 /* Testimonial
 ----------------------------------*/
 .testimonial-area {
