--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="description" content="School news site number 15" />
-    <meta name="author" content="Pavlyk Viktoriya" />
+    <meta name="author" content="Павлюк Вікторія" />
     <!-- css -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/fancybox/jquery.fancybox.css') }}" rel="stylesheet">
@@ -29,16 +29,18 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" /></a>
+                        <a class="navbar-brand" href="/">
+                            <img src="{{ url_for('static', filename='img/logo.png') }}">
+                        </a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="courses.html">Courses</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li class="active"><a href="/">Домашня</a></li>
+                            <li><a href="/about">Про нас</a></li>
+                            <li><a href="/services">Сервіси</a></li>
+                            <li><a href="/courses">Курси</a></li>
+                            <li><a href="/pricing">Ціни</a></li>
+                            <li><a href="/contact">Контакти</a></li>
                         </ul>
                     </div>
                 </div>
