--- a/templates/about.html
+++ b/templates/about.html
@@ -13,24 +13,23 @@
 
 <section id="content">
     <div class="container">
-
         <div class="about">
-
             <div class="row">
                 <div class="col-md-12">
                     <div class="about-logo">
                         <h3>We are awesome <span class="color">TEAM</span></h3>
                         <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
+                            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                            voluptas</p>
                         <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
+                            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                            voluptas</p>
                     </div>
                     <a href="#" class="btn btn-color">Read more</a>
                 </div>
             </div>
-
             <hr>
             <br>
 
@@ -41,10 +40,10 @@
                         <h3><span>Why Choose Us?</span></h3>
                     </div>
                     <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-                        beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.
-                        <br/><br/>Sed ut perspiciaatis iste natus error sit voluptatem probably haven't heard of them
-                        accusamus.</p>
+                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                        aspernatur. <br/><br/>Sed ut perspiciaatis iste natus error sit voluptatem probably haven't
+                        heard of them accusamus.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="block-heading-two">
@@ -57,7 +56,8 @@
                             <!-- Panel heading -->
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseOne-alt3">
+                                    <a data-toggle="collapse" data-parent="#accordion-alt3"
+                                       href="#collapseOne-alt3">
                                         <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 1
                                     </a>
                                 </h4>
@@ -75,7 +75,8 @@
                         <div class="panel">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseTwo-alt3">
+                                    <a data-toggle="collapse" data-parent="#accordion-alt3"
+                                       href="#collapseTwo-alt3">
                                         <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 2
                                     </a>
                                 </h4>
@@ -92,7 +93,8 @@
                         <div class="panel">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseThree-alt3">
+                                    <a data-toggle="collapse" data-parent="#accordion-alt3"
+                                       href="#collapseThree-alt3">
                                         <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 3
                                     </a>
                                 </h4>
@@ -109,7 +111,8 @@
                         <div class="panel">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion-alt3" href="#collapseFour-alt3">
+                                    <a data-toggle="collapse" data-parent="#accordion-alt3"
+                                       href="#collapseFour-alt3">
                                         <i class="fa fa-angle-right"></i> Accordion Heading Text Item # 4
                                     </a>
                                 </h4>
@@ -125,11 +128,9 @@
                         </div>
                     </div>
                     <!-- Accordion ends -->
-
                 </div>
 
                 <div class="col-md-4">
-
                     <h3>Molestie consequat</h3>
                     <ul class="list2">
                         <li><a href="#">Eriure dolor in hendrerit in vulpu</a></li>
@@ -140,10 +141,7 @@
                         <li><a href="#">Equi blandit praesent lup</a></li>
                     </ul>
                 </div>
-
             </div>
-
-
             <br>
             <!-- Our Team starts -->
 
@@ -154,7 +152,6 @@
             <br>
 
             <!-- Our team starts -->
-
             <div class="team-six">
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
@@ -207,21 +204,19 @@
                     </div>
                 </div>
             </div>
-
             <!-- Our team ends -->
-
-
         </div>
-
     </div>
 </section>
+
 <section id="clients">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="aligncenter"><h2 class="aligncenter">Campus Placement</h2>Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident,
-                    doloribus omnis minus ovident, doloribus omnis minus temporibus perferendis nesciunt..
+                    consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni
+                    provident, doloribus omnis minus ovident, doloribus omnis minus temporibus perferendis
+                    nesciunt..
                 </div>
                 <br/>
             </div>
