--- a/templates/index.html
+++ b/templates/index.html
@@ -5,25 +5,37 @@
     <!-- Slider -->
     <div id="main-slider" class="flexslider">
         <input type="radio" name="flexslider" id="slider1" checked>
-        <input type="radio" name="flexslider" id="slider2" checked>
+        <input type="radio" name="flexslider" id="slider2">
         <ul class="slides">
+            {% for ln in latest_news %}
             <li>
-                <img src="{{ url_for('static', filename='img/slides/1.jpg') }}" alt=""/>
+                <div style="
+                        background-image:url('{{ ln.image }}');
+                        width:100%;
+                        height:85vh;
+                        background-position: center;
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        "></div>
+                <!-- <img src="{{ ln.image }}" alt="" /> -->
                 <div class="flex-caption container">
-                    <h3>Smart Learning..</h3>
-                    <p>Doloribus omnis minus temporibus perferendis ipsa<br/> architecto non, magni quam</p>
-                    <a href="#" class="btn btn-theme">Read More</a>
+                    <h3>{{ln.name}}</h3>
+                    <p>{{ln.text}}</p>
+                    <a href="#" class="btn btn-theme">Читати більше</a>
                 </div>
             </li>
+            {% endfor %}
+            <!--
             <li>
-                <img src="{{ url_for('static', filename='img/slides/2.jpg') }}" alt=""/>
+                <img src="{{ url_for('static', filename='img/slides/2.jpg') }}" alt="" />
                 <div class="flex-caption container">
                     <h3>Best Educational Campus..</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing<br/> elitincidunt eius magni
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing<br /> elitincidunt eius magni
                         provident.</p>
                     <a href="#" class="btn btn-theme">Read More</a>
                 </div>
             </li>
+            -->
         </ul>
         <div class="radio-label">
             <label for="slider1"></label>
@@ -31,55 +43,47 @@
         </div>
     </div>
     <!-- end slider -->
-
 </section>
+
 <section class="txt-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="aligncenter">
-                    <h1 class="aligncenter">Our Courses</h1>Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis
-                    minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti
-                    consequuntur possimus.
+                    <h1 class="aligncenter">Шкільні предмети</h1>
+                    <p>Шкільні предмети є основою освіти, допомагаючи учням розвивати різноманітні навички та знання, необхідні для майбутнього життя. Вони охоплюють широкий спектр тем: від математики та природничих наук до літератури та мистецтва, надаючи можливість кожному учню знайти те, що його захоплює.</p>
+                    <p>Математика розвиває логічне мислення і вміння вирішувати проблеми, тоді як природничі науки допомагають розуміти світ навколо нас. Література сприяє розвитку критичного мислення та творчих здібностей, а мистецтво і музика дають можливість виразити себе. Шкільні предмети формують всебічно розвинену особистість, відкриваючи двері до нових можливостей і цікавих захоплень.</p>
                 </div>
-
             </div>
         </div>
     </div>
 </section>
 
-
 <section id="content">
-
-
     <div class="container">
         <div class="row">
             <div class="features">
                 <div class="col-md-4 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms"
-                     data-wow-delay="0ms"
-                     style="visibility: visible; -webkit-animation-duration: 300ms; -webkit-animation-delay: 0ms;">
+                    data-wow-delay="0ms">
                     <div class="media service-box">
                         <div class="pull-left">
                             <i class="fa fa-leanpub"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Admissions</h4>
-                            <p>Backed by some of the biggest names in the industry, Firefox OS is an open
-                                platform that fosters greater</p>
+                            <h4 class="media-heading">Математика</h4>
+                            <p>Наука, яка первісно виникла як один з напрямків пошуку істини у сфері просторових відношень і обчислень, для практичних потреб людини.</p>
                         </div>
                     </div>
                 </div><!--/.col-md-4-->
 
                 <div class="col-md-4 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms"
-                     data-wow-delay="100ms"
-                     style="visibility: visible; -webkit-animation-duration: 300ms; -webkit-animation-delay: 100ms;">
+                    data-wow-delay="100ms">
                     <div class="media service-box">
                         <div class="pull-left">
                             <i class="fa fa-users"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Teacher Info</h4>
+                            <h4 class="media-heading">Географія</h4>
                             <p>Backed by some of the biggest names in the industry, Firefox OS is an open
                                 platform that fosters greater</p>
                         </div>
@@ -87,14 +91,13 @@
                 </div><!--/.col-md-4-->
 
                 <div class="col-md-4 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms"
-                     data-wow-delay="200ms"
-                     style="visibility: visible; -webkit-animation-duration: 300ms; -webkit-animation-delay: 200ms;">
+                    data-wow-delay="200ms">
                     <div class="media service-box">
                         <div class="pull-left">
                             <i class="fa fa-trophy"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Our Campus</h4>
+                            <h4 class="media-heading">Історія</h4>
                             <p>Morbi vitae tortor tempus, placerat leo et, suscipit lectus. Phasellus ut euismod
                                 massa, eu eleifend ipsum.</p>
                         </div>
@@ -102,14 +105,13 @@
                 </div><!--/.col-md-4-->
 
                 <div class="col-md-4 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms"
-                     data-wow-delay="300ms"
-                     style="visibility: visible; -webkit-animation-duration: 300ms; -webkit-animation-delay: 300ms;">
+                    data-wow-delay="300ms">
                     <div class="media service-box">
                         <div class="pull-left">
                             <i class="fa fa-user-plus"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">External Activities</h4>
+                            <h4 class="media-heading">Хімія</h4>
                             <p>Morbi vitae tortor tempus, placerat leo et, suscipit lectus. Phasellus ut euismod
                                 massa, eu eleifend ipsum.</p>
                         </div>
@@ -117,14 +119,13 @@
                 </div><!--/.col-md-4-->
 
                 <div class="col-md-4 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms"
-                     data-wow-delay="400ms"
-                     style="visibility: visible; -webkit-animation-duration: 300ms; -webkit-animation-delay: 400ms;">
+                    data-wow-delay="400ms">
                     <div class="media service-box">
                         <div class="pull-left">
                             <i class="fa fa-newspaper-o"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Sports</h4>
+                            <h4 class="media-heading">Фізика</h4>
                             <p>Morbi vitae tortor tempus, placerat leo et, suscipit lectus. Phasellus ut euismod
                                 massa, eu eleifend ipsum.</p>
                         </div>
@@ -132,14 +133,13 @@
                 </div><!--/.col-md-4-->
 
                 <div class="col-md-4 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms"
-                     data-wow-delay="500ms"
-                     style="visibility: visible; -webkit-animation-duration: 300ms; -webkit-animation-delay: 500ms;">
+                    data-wow-delay="500ms">
                     <div class="media service-box">
                         <div class="pull-left">
                             <i class="fa fa-cubes"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Development</h4>
+                            <h4 class="media-heading">Музика</h4>
                             <p>Morbi vitae tortor tempus, placerat leo et, suscipit lectus. Phasellus ut euismod
                                 massa, eu eleifend ipsum.</p>
                         </div>
@@ -147,60 +147,16 @@
                 </div><!--/.col-md-4-->
             </div>
         </div>
-
-
     </div>
 </section>
 
-<section class="aboutUs">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="aligncenter">
-                    <h2 class="aligncenter">Our Students</h2>Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis
-                    minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti
-                    consequuntur possimus..
-                </div>
-                <br/>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <img src="img/img1.png" alt="">
-                <div class="space"></div>
-            </div>
-            <div class="col-md-6">
-                <p>Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Atque sed,
-                    quidem quis praesentium, ut unde fuga error commodi architecto, oribus omnis minus
-                    temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur
-                    possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo
-                    numquam, ipsa architecto non, magni consequuntlaudantium culpa tenetur at id, beatae pet.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. adipisicing sit amet, consectetur
-                    adipisicing elit. Atque sed, quidem quis praesentium,m deserunt.</p>
-                <ul class="list-unstyled">
-                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum enimdolor sit amet
-                    </li>
-                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Explicabo deleniti neque aliquid
-                    </li>
-                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Consectetur adipisicing elit</li>
-                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum dolor sit amet</li>
-                    <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Quo issimos molest quibusdam
-                        temporibus
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-    </div>
-</section>
 <section id='events'>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="aligncenter">
-                    <h2 class="aligncenter">Our Events</h2>Lorem ipsum dolor sit amet, consectetur adipisicing
+                    <h2 class="aligncenter">Наші події</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing
                     elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis
                     minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti
                     consequuntur possimus.
